Fixed navbar overflow

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@
 
 .navbar{
   display: block;
-  width: 100%;
   background-color: #FFF;
 }
 
